# cecode

./: .gitignore  marimo_new_prompt_template.txt  mo_new_prompt_template.txt  pyproject.toml
src/cecode/: __init__.py
src/cecode/eurocode_7_1/: clause_6_5_bearing_resistance.py
